--- a/basic/build.gradle
+++ b/basic/build.gradle
@@ -33,7 +33,7 @@ dependencies {
 	// Jwt 생성 및 검증을 위한 의존성
 	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.2'
 	implementation group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.2'
-	implementation group: 'io.jsonwebtoken', name: 'jjwt-json', version: '0.11.2'
+	implementation group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'
 
 
 	// RDBMS와 Java의 객체간 매핑을 위한 ORM 기술인 JPA 의존성 
