--- a/basic/build.gradle
+++ b/basic/build.gradle
@@ -28,8 +28,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation' 
 	//RDBMS와 Java의 객체간 매핑을 위한 ORM기술인 JPA 의존성
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa' 
-   // java 기반의 보안 솔루션 프레임워크인 Spring Security 의존성
+   // Java 기반의 보안 솔루션 프레임워크인 Spring Security 의존성
    implementation 'org.springframework.boot:spring-boot-starter-security'
+	// Spring boot에서 OAuth2.0 인증을 사용할 수 있도록 하는 의존성
+   implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    // MySQL 연결을 위한 connector 의존성
    runtimeOnly 'com.mysql:mysql-connector-j:8.0.33' 
    
