--- a/basic/src/main/resources/application.properties
+++ b/basic/src/main/resources/application.properties
@@ -2,10 +2,25 @@ server.port=4000
 
 spring.application.name=basic
 
+# MySQL(Database) Connector
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/basic?serverTimezone=UTC&characterEncoding=UTF-8
-
 spring.datasource.username=root
 spring.datasource.password=root
 
+# Github OAuth2.0 서비스 서버측 설정 - 사용자
+spring.security.oauth2.client.registration.github.client-id=731ee3823db18120bc75
+spring.security.oauth2.client.registration.github.client-secret=cb2cb7190164608b6218642e4e4bcd4815ef272e
+spring.security.oauth2.client.registration.github.redirect-uri={baseUrl}/oauth2/callback/{registrationId}
+spring.security.oauth2.client.registration.github.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.github.scope=read:user
+
+# Github OAuth2.0 인증 서버 설정 - client
+spring.security.oauth2.client.provider.github.authorization-uri=https://github.com/login/oauth/authorize
+spring.security.oauth2.client.provider.github.token-uri=https://github.com/login/oauth/access_token
+spring.security.oauth2.client.provider.github.user-info-uri=https://api.github.com/user
+spring.security.oauth2.client.provider.github.user-name-attribute=id
+
+
+# jwt 비밀키 환경 변수
 jwt.secret-key=zxcvASDFqwer1234!@#$mnbLKJHpoiu0987
